--- a/BLVDEContentStudio.csproj
+++ b/BLVDEContentStudio.csproj
@@ -17,6 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="supabase-csharp" Version="0.16.2" />
+    <PackageReference Include="System.Management" Version="10.0.1" />
+    <PackageReference Include="Telegram.Bot" Version="22.8.0" />
   </ItemGroup>
   
   <ItemGroup>
